@@ -4,7 +4,7 @@ import commercial.TrendWay.dto.ResponseModel;
 import commercial.TrendWay.entity.*;
 import commercial.TrendWay.exceptions.BadRequestException;
 import commercial.TrendWay.exceptions.ErrorCodes;
-import commercial.TrendWay.repository.*;
+import commercial.TrendWay.repository.OrderRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,54 +21,34 @@ public class OrderService {
 
     private static final Logger logger = LoggerFactory.getLogger(OrderService.class);
 
-    private final UserRepository userRepository;
     private final OrderRepository orderRepository;
-    private final ProductRepository productRepository;
-    private final CartRepository cartRepository;
-    private final CartItemRepository cartItemRepository;
+    private final UserService userService;
+    private final CartService cartService;
+    private final ProductService productService;
 
     /**
-     * Creates an order for a user based on the items in their cart.
+     * Creates an order for a user.
      *
-     * @param userId   The ID of the user placing the order.
-     * @param username The username of the user placing the order.
-     * @param password The password of the user placing the order.
-     * @return ResponseEntity with the order creation status and order details.
+     * @param userId   The ID of the user.
+     * @param username The username of the user.
+     * @param password The password of the user.
+     * @return ResponseEntity with the result of the operation.
      */
     @Transactional
     public ResponseEntity<ResponseModel> createOrder(Long userId, String username, String password) {
         logger.info("Creating order for user ID: {}", userId);
 
-        // Find user by ID
-        User user = userRepository.findById(userId).orElseThrow(() -> {
-            logger.warn("User not found: {}", userId);
-            return new BadRequestException("User not found", ErrorCodes.USER_NOT_FOUND);
-        });
+        User user = userService.validateUser(username, password);
+        Cart cart = cartService.getCartByUser(user);
+        List<CartItem> cartItems = cartService.getCartItems(cart);
 
-        // Validate user credentials
-        if (!user.getUsername().equals(username) || !user.getPassword().equals(password)) {
-            logger.warn("Invalid credentials for user: {}", username);
-            throw new BadRequestException("INVALID CREDENTIALS", ErrorCodes.INVALID_CREDENTIALS);
-        }
-
-        // Find cart by user
-        Cart cart = cartRepository.findByUser(user).orElseThrow(() -> {
-            logger.warn("Cart not found for user ID: {}", userId);
-            return new BadRequestException("Cart not found", ErrorCodes.CART_NOT_FOUND);
-        });
-
-        // Find cart items
-        List<CartItem> cartItems = cartItemRepository.findByCart(cart);
-
-        // Check if cart is empty
         if (cartItems.isEmpty()) {
             throw new BadRequestException("Cart is empty", ErrorCodes.CART_EMPTY);
         }
 
         double totalAmount = 0;
-        Company company = cartItems.get(0).getProduct().getCompany(); // Fetch company from the first product
+        Company company = cartItems.get(0).getProduct().getCompany();
 
-        // Validate product stock and calculate total amount
         for (CartItem cartItem : cartItems) {
             Product product = cartItem.getProduct();
             if (product.getStock() < cartItem.getQuantity()) {
@@ -79,35 +58,32 @@ public class OrderService {
             totalAmount += product.getPrice() * cartItem.getQuantity();
         }
 
-        // Create new order
-        Order order = new Order();
-        order.setUser(user);
-        order.setCompany(company);
-        order.setOrderDate(new Date());
-        order.setTotalAmount(totalAmount);
-
-        // Create order items and update product stock
+        Order order = new Order(user, company, null, new Date(), totalAmount);
         List<OrderItem> orderItems = cartItems.stream().map(cartItem -> {
             Product product = cartItem.getProduct();
             product.setStock(product.getStock() - cartItem.getQuantity());
-            productRepository.save(product);
+            productService.updateProductStock(product);
 
-            OrderItem orderItem = new OrderItem();
-            orderItem.setProduct(product);
-            orderItem.setQuantity(cartItem.getQuantity());
-            orderItem.setPrice(product.getPrice());
-            orderItem.setOrder(order);
-            return orderItem;
-        }).collect(Collectors.toList());
+            return new OrderItem(order, product, product.getPrice(), cartItem.getQuantity());
+        }).toList();
 
-        // Save order with order items
         order.setOrderItems(orderItems);
         orderRepository.save(order);
 
-        // Clear cart items after order creation
-        cartItemRepository.deleteAll(cartItems);
+        cartService.clearCartItems(cartItems);
 
         logger.info("Order created for user ID: {}", userId);
         return ResponseEntity.status(201).body(new ResponseModel(201, "Order created successfully", order));
+    }
+
+    /**
+     * Retrieves an order by its ID.
+     *
+     * @param orderId The ID of the order.
+     * @return The order entity.
+     * @throws BadRequestException if the order is not found.
+     */
+    public Order getOrderById(Long orderId) {
+        return orderRepository.findById(orderId).orElseThrow(() -> new BadRequestException("Order not found", ErrorCodes.ORDER_NOT_FOUND));
     }
 }
